[package]
name = "depression-project"
version = "0.1.0"
authors = ["wanzulfikri <wanzulfikri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "depression_project_cli"
path = "src/main.rs"

[lib]
name = "dp_lib"
path = "src/lib.rs"

[dependencies]
